{
    "appTitle": "BusLink",
    "generateReport": "Generate Report",
    "dashboard": "Dashboard",
    "revenue": "Revenue",
    "lateDepartures": "Late Departures",
    "search": "Search",
    "date": "Date",
...
    "feedback": "Feedback",
    "profile": "Profile",
    "logout": "Log Out",
    "enterOriginDestination": "Please enter origin and destination",
    "yourFavorites": "Your Favorites",
    "tapToQuickBook": "Tap to quick book",
    "management": "Management",
    "manageSubtitle": "Manage your routes, trips, and bookings.",
    "addTrip": "Add New Trip",
    "addRoute": "Add Route",
    "manageRoutes": "Manage Routes",
    "manageRoutes": "Manage Routes",
    "analytics": "Analytics",
...
    "loginErrorEmpty": "Email and Password cannot be empty.",
    "welcome": "Welcome!",
    "loginSubtitle": "Log in to BusLink to continue.",
    "signupSubtitle": "Join us and start your journey today.",
    "continueWithGoogle": "Continue with Google",
    "orDivider": "OR",
    "fullName": "Full Name",
    "enterFullName": "Enter your full name",
    "nameRequired": "Name is required",
    "nameInvalid": "Enter a valid name (Alphabets only)",
    "nameTooShort": "Name too short",
    "email": "Email",
    "enterEmail": "Your email address",
...
